--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,5 +1,5 @@
 .contact__banner {
-  background-image: url(./assets/graphics/404img.png);
+  background-image: url(../graphics/404img.png);
 }
 
 .contact__grid {
