--- a/assets/css/thanks.css
+++ b/assets/css/thanks.css
@@ -1,3 +1,3 @@
 .thanks__banner {
-    background-image: url(/assets/graphics/thanks.png);
+    background-image: url(../assets/graphics/thanks.png);
   }
