--- a/assets/css/checkout.css
+++ b/assets/css/checkout.css
@@ -1,5 +1,5 @@
 .checkout__banner {
-  background-image: url(/assets/graphics/Shop-page/shop-Banner.png);
+  background-image: url(../graphics/Shop-page/shop-Banner.png);
 }
 
 .checkout_cart{
