--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,5 +1,5 @@
 .blog__banner {
-  background-image: url(/assets/graphics/Blog-page/Banner.png);
+  background-image: url(../graphics/Blog-page/Banner.png);
 }
 
 .blog__content.blog__page-content {
