--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -779,7 +779,7 @@ input::selection {
 }
 
 .offer__two {
-  background-image: url(../graphics/offer/offer-2-img.png);
+  background-image: url("../graphics/offer/offer-2-img.png");
 }
 
 .offer__two h2 {
