--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1354,7 +1354,7 @@ input::selection {
 }
 
 .post-3 {
-  background-image: url(/assets/graphics/Blog-page/blog-post-img-3.png);
+  background-image: url("../graphics/Blog-page/blog-post-img-3.png");
 }
 
 .post-4 {
